--- a/src/components/Products/ProductItem.module.css
+++ b/src/components/Products/ProductItem.module.css
@@ -91,7 +91,7 @@
 }
 
 .icon {
-  color:white;
+  color: white;
   position: absolute;
   padding-left: 7px;
   right: 10px;
@@ -105,6 +105,7 @@
 }
 
 .btn {
+  width: 100%;
   font-size: 1.15rem;
   padding: 0.4em 0.65em;
   cursor: pointer;
@@ -117,14 +118,7 @@
   border: 1px solid hsl(49, 98%, 60%);
   margin-right: 10px;
 }
-.btn-secondary {
-  background-color: transparent;
-  border: 1px solid transparent;
-}
 .btn-primary:hover {
   background-color: hsl(49, 92%, 65%);
   border: 1px solid hsl(49, 98%, 75%);
-}
-.btn-secondary:hover {
-  border: 1px solid black;
 }
